Mon Jan 22 06:02:55 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: added support for Tripplite SmartOnline SU1500RTXL2ua
 - scripts/path-to-subdriver.sh: updated for new user messages

Sun Jan 21 23:56:03 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - ChangeLog: converted all dates to UTC

Sun Jan 21 22:21:41 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - usbhid-ups: better messages for unrecognized productids.

Sun Jan 21 19:25:10 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - megatec: added a new parameter to override the battery empty and battery
   full voltages, used in the charge calculations
 - data/driver.list: a couple new models supported by megatec
 - docs/FAQ: removed fentonups reference
 - added myself to the AUTHORS and MAINTAINERS files

Sun Jan 21 10:42:29 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upslog.c, clients/upsimage.c, clients/upsc.c, clients/upsrw.c,
   clients/upscmd.c: allow specifying a UPS as upsname[@hostname[:port]]
   (default to 'localhost' if no hostname is specified)

Sat Jan 20 20:18:28 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/netuser.c, server/upsd.c: lowered loglevel for opening and
   closing connections from LOG_INFO to LOG_DEBUG [Alioth Bug #304113]

Sat Jan 20 19:36:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsmon.c, clients/upsc.c: removed check for validity of UPS
   definition (this is handled by the API, which may fill in defaults)
 * clients/upsclient.c:
   - honor the UPSCLI_CONN_INET and UPSCLI_CONN_INET6 flags to request a
     IPv4 only or IPv6 only connection (may be useful in mixed environments
     where a hostname resolves in both A and AAAA addresses)
   - if no hostname is specified, dynamically allocate memory for the
     default hostname instead of pointing to a string constant (clients
     assume the memory needs to be free'd if it is not a NULL pointer)
