@@ -1,4 +1,4 @@
-.TH HOSTS.CONF 5 "Tue Sep  3 2002" "" "Network UPS Tools (NUT)"
+.TH HOSTS.CONF 5 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 hosts.conf \- Access control for Network UPS Tools CGI programs
 
@@ -13,14 +13,15 @@ to annoy others by creating outgoing connections.
 
 .IP "MONITOR \fIups\fR \fIdescription\fR"
 
-The \fIups\fR element is in the form "upsname@hostname[:port]".  
+The \fIups\fR element is in the form "upsname[@hostname[:port]]".
 To allow connections to a UPS called "snoopy" on a system called
 "doghouse" that runs upsd on port 7877, it would look like this:
 
 	MONITOR snoopy@doghouse:7877 "Joe Cool"
 
 The description must be one element, so if it has spaces, then it must
-be wrapped with quotes as shown above.
+be wrapped with quotes as shown above.  The default hostname is
+"localhost".
 
 .SH SEE ALSO
 \fBupsset.cgi\fR(8), \fBupsstats.cgi\fR(8), \fBupsimage.cgi\fR(8)
