@@ -1,4 +1,4 @@
-.TH UPSCLI_DISCONNECT 3 "Sun Oct  6 2002" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_DISCONNECT 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_disconnect \- disconnect from a UPS server
 .SH SYNOPSIS
@@ -19,5 +19,5 @@ file descriptors.
 The \fBupscli_disconnect()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_connect "(3), " upscli_fd "(3), "
+.BR upscli_connect "(3), "upscli_fd "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
