@@ -1,4 +1,4 @@
-.TH UPSCLI_FD 3 "Wed May  7 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_FD 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_fd \- Get file descriptor for connection
 .SH SYNOPSIS
@@ -19,4 +19,4 @@ has been lost.
 The \fBupscli_fd()\fP function returns the file descriptor, which
 may be any non\(hynegative number.  It returns \-1 if an error occurs.
 .SH "SEE ALSO"
-.BR upscli_connect "(3), " upscli_strerror "(3), "upscli_upserror "(3) "
+.BR upscli_connect "(3), "upscli_strerror "(3), "upscli_upserror "(3) "
