@@ -1,4 +1,4 @@
-.TH UPSCLI_GET 3 "Mon May 12 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_GET 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_get \- retrieve data from a UPS
 .SH SYNOPSIS
@@ -87,5 +87,5 @@ access after that point is also undefined.
 The \fBupscli_get()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_list_start "(3), " upscli_list_next "(3), "
+.BR upscli_list_start "(3), "upscli_list_next "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
