@@ -1,4 +1,4 @@
-.TH UPSCLI_LIST_START 3 "Tue May 13 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_LIST_START 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_list_start \- begin multi\(hyitem retrieval from a UPS
 .SH SYNOPSIS
@@ -58,7 +58,8 @@ When this happens, \fBupscli_upserror\fP(3) will return
 The \fBupscli_list_start()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
+
