@@ -1,4 +1,4 @@
-.TH UPSCLI_READLINE 3 "Sun Oct  6 2002" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_READLINE 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_readline \- read a single response from a UPS
 .SH SYNOPSIS
@@ -20,7 +20,7 @@ function to return \-1.
 The \fBupscli_readline()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
