@@ -1,4 +1,4 @@
-.TH UPSCLI_SENDLINE 3 "Fri Sep  6 2002" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_SENDLINE 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_sendline \- send a single command to a UPS
 .SH SYNOPSIS
@@ -18,7 +18,7 @@ parsing of the buffer occurs within this function.
 The \fBupscli_sendline()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
