@@ -1,4 +1,4 @@
-.TH UPSCLI_SPLITNAME 3 "Tue Jul 29 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_SPLITNAME 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_splitname \- split a UPS definition into its components
 .SH SYNOPSIS
@@ -16,23 +16,21 @@ number into \fIport\fP.
 .SH FORMATTING
 A UPS definition is specified according to this format:
 .PP
-	<upsname>@<hostname>[:<port>]
+	<upsname>[@<hostname>[:<port>]]
 .PP
 When the UPS name is not given, this function will print an error to
-stderr and return \-1 without changing anything.  To avoid this behavior,
-check the UPS definition for the presence of a '@' before calling
-this function.
+stderr and return \-1 without changing anything.
 .PP
 Definitions without an explicit port value receive the default value of
-3493.
+3493.  The default hostname is "localhost".
 .SH "MEMORY USAGE"
 You must \fBfree\fP(3) the pointers to \fIupsname\fP and \fIhostname\fP
 when you are done with them to avoid memory leaks.
 .SH "RETURN VALUE"
-The \fBupscli_readline()\fP function returns 0 on success, or \-1 if an
+The \fBupscli_splitname()\fP function returns 0 on success, or \-1 if an
 error occurs.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_splitaddr "(3), "upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
