@@ -1,4 +1,4 @@
-.TH UPSCLI_SSL 3 "Wed May  7 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_SSL 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_ssl \- Check SSL mode for current connection
 .SH SYNOPSIS
@@ -17,7 +17,7 @@ enabled for this connection.
 The \fBupscli_ssl()\fP function returns 1 if SSL is running, and 0 if
 not.  It returns \-1 in the event of an error.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
