@@ -1,4 +1,4 @@
-.TH UPSCLI_STRERROR 3 "Fri Sep  6 2002" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_STRERROR 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_strerror \- return string describing error condition
 .SH SYNOPSIS
@@ -16,7 +16,7 @@ call to \fBupscli_strerror()\fP.
 The \fBupscli_strerror()\fP function returns a description of the error,
 or an unknown error message if the error code is not recognized.
 .SH "SEE ALSO"
-.BR upscli_fd "(3), " upscli_get "(3), "
-.BR upscli_readline "(3), "upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_ssl "(3), "
+.BR upscli_fd "(3), "upscli_get "(3), "
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_ssl "(3), "
 .BR upscli_strerror "(3), "upscli_upserror "(3) "
