@@ -1,4 +1,4 @@
-.TH UPSCLI_UPSERROR 3 "Wed May  7 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLI_UPSERROR 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upscli_upserror \- Get current error number for connection
 .SH SYNOPSIS
@@ -23,5 +23,5 @@ Some error messages have additional meanings, so you should use
 The \fBupscli_upserror()\fP function returns one of the UPSCLI_ERR_*
 values from \fBupsclient.h\fR, or 0 if no error has occurred.
 .SH "SEE ALSO"
-.BR upscli_readline "(3), " upscli_sendline "(3), " 
-.BR upscli_splitname "(3), " upscli_strerror (3)
+.BR upscli_readline "(3), "upscli_sendline "(3), "
+.BR upscli_strerror (3)
