@@ -1,4 +1,4 @@
-.TH UPSCLIENT 3 "Tue Jul 29 2003" "" "Network UPS Tools (NUT)"
+.TH UPSCLIENT 3 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upsclient \- Network UPS Tools client access library
 .SH SYNOPSIS
@@ -44,9 +44,10 @@ also be used to retrieve the error number.  These numbers are defined in
 \fBupsclient.h\fP as \fIUPSCLI_ERR_*\fP.
 .PP
 .SH "SEE ALSO"
-.BR upscli_connect "(3), " upscli_disconnect "(3), " upscli_fd "(3), "
-.BR upscli_getvar "(3), " upscli_list_next "(3), "
-.BR upscli_list_start "(3), " upscli_readline "(3), "
-.BR upscli_sendline "(3), " upscli_splitname "(3), "
-.BR upscli_ssl "(3), " upscli_strerror "(3), "
+.BR upscli_connect "(3), "upscli_disconnect "(3), "upscli_fd "(3), "
+.BR upscli_getvar "(3), "upscli_list_next "(3), "
+.BR upscli_list_start "(3), "upscli_readline "(3), "
+.BR upscli_sendline "(3), "
+.BR upscli_splitaddr "(3), "upscli_splitname "(3), "
+.BR upscli_ssl "(3), "upscli_strerror "(3), "
 .BR upscli_upserror "(3) "
