@@ -1,4 +1,4 @@
-.TH UPSLOG 8 "Sat May 10 2003" "" "Network UPS Tools (NUT)" 
+.TH UPSLOG 8 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)" 
 .SH NAME
 upslog \- UPS status logger
 .SH SYNOPSIS
@@ -62,7 +62,7 @@ You can use \(hy for stdout, but upslog will remain in the foreground.
 
 .IP "\-s \fIups\fR"
 Monitor this UPS.  The format for this option is  
-upsname@hostname[:port].  
+upsname[@hostname[:port]].  The default hostname is "localhost".
 
 .IP "\-u \fIusername\fR"
 
