@@ -1,4 +1,4 @@
-.TH UPSMON.CONF 5 "Wed Oct 16 2002" "" "Network UPS Tools (NUT)"
+.TH UPSMON.CONF 5 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)"
 .SH NAME
 upsmon.conf \- Configuration for Network UPS Tools upsmon
 
@@ -101,9 +101,9 @@ You must have at least one MONITOR directive in this file.
 
 \fIsystem\fR is a UPS identifier.  It is in this form:
 
-	<upsname>@<hostname>[:<port>]
+	<upsname>[@<hostname>[:<port>]]
 
-Some examples:
+The default hostname is "localhost".  Some examples:
 
  \(hy "su700@mybox" means a UPS called "su700" on a system called "mybox".
 This is the normal form.
