@@ -1,4 +1,4 @@
-.TH UPSRW 8 "Sat May 10 2003" "" "Network UPS Tools (NUT)" 
+.TH UPSRW 8 "Mon Jan 22 2007" "" "Network UPS Tools (NUT)" 
 .SH NAME
 upsrw \- UPS variable administration tool
 .SH SYNOPSIS
@@ -52,7 +52,7 @@ like \-u, and you will be prompted for it if necessary.
 
 .IP \fIups\fR
 View or change the settings on this UPS.  The format for this option is
-upsname@hostname[:port].  
+upsname[@hostname[:port]].  The default hostname is "localhost".
 
 .SH UNATTENDED MODE
 
